# OCoZapytac

./: .replit  DEPLOYMENT_GUIDE.md  STEP_BY_STEP_GUIDE.md  main.py  ocozapytac.sql  package.json  pnpm-lock.yaml  project-structure.md  pyproject.toml  run.py  sitemap.xml
app/: page.tsx
assets/css/: components.css  main.css
backend/: Dockerfile  README.md  STEP_BY_STEP_GUIDE.md  create_article_example.py  database.py  docker-compose.yml  email_service.py  main.py  models.py  pyproject.toml  schemas.py  seed_data.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: articles.py  categories.py  contact.py  contact_endpoint.py  html_upload.py  pages.py  users.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  article.py  contact.py  user.py
backend/app/schemas/: __init__.py  article.py  contact.py  user.py
backend/app/services/: email_service.py
backend/app/utils/: slug.py
backend/scripts/: create-database.sql  run_dev.sh  seed_data.py
frontend/: README.md  about.html  article.html  articles.html  base.html  categories.html  contact.html  index.html
scripts/: create-database.sql
static/css/: contact.css  main.css
static/js/: article.js  articles.js  contact.js
templates/: about.html  article.html  articles.html  base.html  categories.html  contact.html  index.html  single_article.html
templates/partials/: article_card.html  related_articles.html
uploaded_html_content/: 20250803_122606_2db5d727_Untitleddocument.html  20250803_185727_70c355e5_Untitleddocument.html
(+6 files in other folders)
